engine-net-2/examples/Errors/UnknownPatternElementCompiled.grg
#include "Rules.grg"

sequence s1
{
	[?t\assign<x>StartWith{0}AccumulateBy{accu:int,elem:int->42}]
}
